Correción rutas de scripts

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,7 @@ const { title = 'Maglev Servicios eléctricos - Electricista Profesional' } = As
   </head>
   <body class="font-sans antialiased">
     <slot />
-    <script type="module" src="/src/scripts/main.js"></script>
+    <script type="module" src="/scripts/main.js"></script>
+    
   </body>
 </html>
