--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ import Button from './Button.astro';
       <div class="floating-animation mb-8">
         <div class="w-20 h-20 sm:w-24 sm:h-24 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center mx-auto shadow-2xl">
           
-          <img class="rounded-xl" src="./public/Logo.svg" alt="">
+          <img class="rounded-xl" src="/public/Logo.svg" alt="">
         </div>
       </div>
       <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold mb-6 sm:mb-8 leading-tight">
