Correción de rutas Logo

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -18,7 +18,7 @@
         class="project-card bg-white rounded-2xl modern-shadow overflow-hidden border border-gray-100"
       >
         <div
-          class="h-56 bg-[url(/public/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
+          class="h-56 bg-[url(/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
         >
         
           <div
@@ -51,7 +51,7 @@
         class="project-card bg-white rounded-2xl modern-shadow overflow-hidden border border-gray-100"
       >
         <div
-          class="h-56 bg-[url(/public/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
+          class="h-56 bg-[url(/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
         >
           <div
             class="absolute bottom-4 right-4 bg-black/60 backdrop-blur-sm text-white px-3 py-2 rounded-lg text-sm font-medium"
@@ -83,7 +83,7 @@
         class="project-card bg-white rounded-2xl modern-shadow overflow-hidden border border-gray-100"
       >
         <div
-          class="h-56 bg-[url(/public/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
+          class="h-56 bg-[url(/img/Manantiales_2.jpg)] bg-no-repeat bg-center bg-contain flex items-center justify-center relative"
         >
           <div
             class="absolute bottom-4 right-4 bg-black/60 backdrop-blur-sm text-white px-3 py-2 rounded-lg text-sm font-medium"
