--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="flex items-center space-x-3 mb-6 md:mb-0">
         <div class="w-10 h-10 bg-gradient-to-br from-blue-600 to-purple-600 rounded-xl flex items-center justify-center shadow-lg">
-          <img class="rounded-xl" src="./public/Logo.svg" alt="">
+          <img class="rounded-xl" src="/Logo.svg" alt="">
         </div>
         <div>
           <span class="text-xl font-bold text-white">Maglev</span>
