--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@
       </div>
       <div class="text-center md:text-right">
         <p class="text-gray-300 text-lg mb-2">© 2025 Maglev Servicios Eléctricos. Todos los derechos reservados.</p>
-        <p class="text-gray-400 text-sm">Desarrollado por <a href="https://www.linkedin.com/in/miguel-angel-murua-93a880252/" target="_blank">MigueDev</a></p>
+        <p class="text-gray-400 text-sm">Desarrollado por <a href="https://portfolio-2025-eta-smoky.vercel.app/" target="_blank">MigueDev</a></p>
       </div>
     </div>
   </div>
